float: styled multiple images to allow floating text around the left and right of the images & set display property to flow-root to stop overflow from image being over border.

--- a/style.css
+++ b/style.css
@@ -6,23 +6,16 @@
     src: url(fonts/OpenSans-VariableFont_wdth,wght.ttf);
     font-family: OpenSans;
 }
-
 body{
-    margin: 0px;
+    border: 3px solid;
+    display: flow-root;
 }
-.box{
-    border: 5px solid;
-    font-size: 5em;
-    width: 250px;
-    height: 250px;
+#img1{
+    float: left;
+    margin-right: 10px;
 }
-#box1{
-    background-color: rgb(39, 172, 198);
-    margin-top: 50px;
-    margin-left: 50px;
-    margin-bottom: 50px;
-}
-#box2{
-    background-color: rgb(64, 54, 181);
-    margin-top: 100px;
+
+#img2{
+    float: right;
+    margin-left: 10px;
 }
